--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -34,3 +34,12 @@
   display: flex;
   flex-flow: row;
 }
+
+.minimap {
+  background-color: orange;
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 100px;
+  height: 100px;
+}
