--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,10 @@ body {
 
   display: flex;
 }
+
+button {
+  border: 1px solid black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
