--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -23,11 +23,14 @@
 
 .toolbar {
   height: 50px;
-  background-color: hsla(0, 0%, 0%, 0.1);
 
   display: flex;
   align-items: stretch;
   justify-content: space-around;
+
+  & > * {
+    margin: 4px;
+  }
 }
 
 .rowIndexDisplay {
@@ -43,4 +46,5 @@
   top: 0;
   width: 100px;
   height: 100px;
+  margin: 12px;
 }
