--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -39,12 +39,16 @@
   align-items: center;
 }
 
-.minimap {
-  background-color: orange;
+.minimapContainer {
   position: absolute;
   right: 0;
   top: 0;
-  width: 100px;
-  height: 100px;
+  width: 150px;
+  height: 150px;
   margin: 12px;
+}
+
+.minimap {
+  width: 100%;
+  height: 100%;
 }
