--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -19,6 +19,10 @@
 
 .workspace {
   flex: 1;
+
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
 }
 
 .toolbar {
@@ -30,6 +34,11 @@
 
   & > * {
     margin: 4px;
+  }
+
+  & > button {
+    display: flex;
+    touch-action: manipulation;
   }
 }
 
