--- a/src/Workspace.module.scss
+++ b/src/Workspace.module.scss
@@ -1,19 +1,9 @@
 .scrollContainer {
+  position: relative;
+  overflow-x: scroll;
+  overflow-y: clip;
   width: 100%;
   height: 100%;
-  position: relative;
-  overflow: scroll;
-}
-
-.scrollContent {
-  position: absolute;
-  left: 0;
-  top: 0;
-  bottom: 0;
-
-  display: flex;
-  flex-flow: column nowrap;
-  justify-content: center;
 }
 
 .rowInfoBox {
@@ -22,8 +12,6 @@
   background-color: hsla(0, 0%, 100%, 0.8);
 
   z-index: 10;
-
-  max-height: 80px;
 
   display: flex;
   flex-flow: column;
@@ -45,7 +33,6 @@
 
 .rowContainer {
   position: absolute;
-  height: 80px;
 
   display: flex;
   flex-flow: row nowrap;
@@ -55,6 +42,24 @@
 
 .stitch {
   border: 1px solid white;
+  z-index: 0;
+
+  &:not(.focusedRow) {
+    transform: scale(0.7);
+  }
+
+  .focusedRow &:not(.focusedStitch) {
+    transform: scale(1);
+  }
+
+  &.focusedStitch {
+    transform: scale(1.3);
+    z-index: 1;
+
+    & .columnIndex {
+      transform: translateY(5px);
+    }
+  }
 }
 
 .columnIndex {
