--- a/src/Infobox.module.scss
+++ b/src/Infobox.module.scss
@@ -1,3 +1,12 @@
 .container {
   text-align: center;
 }
+
+.nextStitchColorPreview {
+  display: inline-block;
+  width: 12px;
+  height: 12px;
+  border: 1px solid black;
+  transform: translateY(2px);
+  margin: 0 1px;
+}
