--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -11,10 +11,10 @@
   justify-content: space-between;
 }
 
-.navbar {
-  height: 50px;
-  display: flex;
-  flex-flow: row;
+.topToolbar {
+  & > * {
+    margin: 10px;
+  }
 }
 
 .workspaceContainer {
@@ -23,6 +23,11 @@
   align-items: flex-start;
   justify-content: center;
   flex-flow: column nowrap;
+}
+
+.rowIncrementButton {
+  padding: 4px;
+  margin: 10px;
 }
 
 .workspace {
@@ -63,4 +68,40 @@
 .minimap {
   width: 100%;
   height: 100%;
+}
+
+.rowZeroIndicator {
+  &::after{
+    content: "Row 0";
+  }
+
+  position: absolute;
+  left: -55px;
+  margin-top: 13px;
+
+  &[data-direction="ascending"] {
+    top: 0;
+  }
+
+  &[data-direction="descending"] {
+    top: 100%;
+  }
+}
+
+.verticalDirectionIndicator {
+  position: absolute;
+  transform: translateX(calc(-100% - 10px));
+  top: 40px;
+  text-align: right;
+}
+
+.filePicker {
+  background: hsla(0, 0%, 50%, 0.1);
+  padding: 2px;
+  text-align: center;
+  cursor: pointer;
+
+  &:hover {
+    background: hsla(0, 0%, 50%, 0.2);
+  }
 }
