--- a/src/Workspace.module.scss
+++ b/src/Workspace.module.scss
@@ -45,7 +45,6 @@
 }
 
 .stitch {
-  border: 1px solid white;
   z-index: 0;
 
   &:not(.focusedRow) {
@@ -57,12 +56,25 @@
   }
 
   &.focusedStitch {
-    transform: scale(1.3);
+    transform: scale(1.5);
     z-index: 1;
 
     & .columnIndex {
       transform: translateY(5px);
     }
+  }
+
+  & .stitchColor {
+    position: absolute;
+    transform: scale(0.6);
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    border: 1px solid hsla(0, 0%, 100%, 0.3);
+  }
+
+  &.focusedStitch .stitchColor {
+    border: 1px solid white;
   }
 }
 
