--- a/src/Workspace.module.scss
+++ b/src/Workspace.module.scss
@@ -9,7 +9,10 @@
 .rowInfoBox {
   position: -webkit-sticky;
   position: sticky;
-  background-color: hsla(0, 0%, 100%, 0.8);
+  background-color: hsla(0, 0%, 100%, 0.6);
+  border-radius: 4px;
+  backdrop-filter: blur(5px);
+  margin: 0 14px;
 
   z-index: 10;
 
@@ -86,7 +89,9 @@
   width: 14px;
   height: 14px;
   margin: 2px;
-  border: 1px solid black;
+  border: 1px solid hsla(0, 0%, 0%, 0.5);
+
+  border-radius: 50%;
 }
 
 .bookmark {
