--- a/src/Toolbar.module.scss
+++ b/src/Toolbar.module.scss
@@ -89,9 +89,10 @@
 .colorPreview {
   flex-shrink: 0;
   display: inline-block;
-  width: 12px;
-  height: 12px;
-  border: 1px solid black;
-  transform: translateY(2px);
+  width: 16px;
+  height: 16px;
+  border: 1px solid hsla(0, 0%, 0%, 0.5);
+  border-radius: 50%;
+  transform: translateY(4px);
   margin: 0 1px;
 }
