--- a/src/Toolbar.module.scss
+++ b/src/Toolbar.module.scss
@@ -14,6 +14,9 @@
   }
 
   .primaryAction {
+    font-size: 18px;
+    padding: 20px;
+
     flex-grow: 1;
     background: var(--primary-action-background);
     color: var(--primary-action-title-color);
@@ -21,6 +24,16 @@
 
     &:active {
       background-color: var(--primary-action-active-highlight);
+    }
+
+    .primaryActionTitles {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+
+      & > * {
+        margin: 4px 0;
+      }
     }
   }
 
@@ -54,11 +67,6 @@
 
 .mainRow {
   flex: 1;
-
-  & .jumpButton {
-    font-size: 16px;
-    padding: 20px;
-  }
 }
 
 .jumpButton {
@@ -95,4 +103,6 @@
   border-radius: 50%;
   transform: translateY(4px);
   margin: 0 1px;
+
+  box-sizing: border-box;
 }
